--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,38 +15,39 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MindMeld"
-        tools:targetApi="31">
+        tools:targetApi="31"
+        android:windowSoftInputMode="adjustPan">
         <activity
-            android:name="com.example.mindmeld.CommentActivity"
-            android:exported="false"
-            android:label="Comment" />
-        <activity
-            android:name="com.example.mindmeld.MessagingActivity"
-            android:exported="false" />
-        <activity
-            android:name="com.example.mindmeld.SignupActivity"
-            android:exported="false" />
-        <activity
-            android:name="com.example.mindmeld.MainActivity"
-            android:exported="false"
-            android:label="@string/title_activity_main"
-            android:theme="@style/Theme.MindMeld.NoActionBar"
-            android:windowSoftInputMode="adjustPan" />
-        <activity
-            android:name="com.example.mindmeld.LoginActivity"
+            android:name=".SplashScreenActivity"
             android:exported="true"
-            android:label="@string/app_name">
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        <activity
+            android:name=".CommentActivity"
+            android:exported="false"
+            android:label="Comment" />
+        <activity
+            android:name=".MessagingActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SignupActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="false"
+            android:theme="@style/Theme.MindMeld.NoActionBar"/>
+        <activity
+            android:name=".LoginActivity"
+            android:exported="false"
+            />
         <service
-            android:name="com.example.mindmeld.FirebaseMessagingService"
-            android:permission="TODO"
-            android:exported="true">
+            android:name=".FirebaseMessagingService"
+            android:exported="false"
+            android:permission="TODO">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
